User add account

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
+            "App\\DB\\": "App/DB/",
             "Bank\\" : ""
         }
     },
